hugr-llvm/src/emit/ops/snapshots/hugr_llvm__emit__ops__cfg__test__diverse_outputs@llvm21.snap
---
source: hugr-llvm/src/emit/ops/cfg.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal i8 @_hl.main.1(i8 %0, i8 %1) !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  br label %2

2:                                                ; preds = %11, %entry_block
  %"7_0.0" = phi i8 [ %0, %entry_block ], [ %12, %11 ]
  %"7_1.0" = phi i8 [ %1, %entry_block ], [ %7, %11 ]
  %3 = insertvalue { i8, i8 } poison, i8 %"7_0.0", 0, !dbg !8
  %4 = insertvalue { i8, i8 } %3, i8 %"7_1.0", 1, !dbg !8
  switch i1 false, label %5 [
  ]

5:                                                ; preds = %2
  %6 = extractvalue { i8, i8 } %4, 0
  %7 = extractvalue { i8, i8 } %4, 1
  br label %8

8:                                                ; preds = %5
  %9 = insertvalue { i1, i8 } { i1 false, i8 poison }, i8 %6, 1
  %10 = extractvalue { i1, i8 } %9, 0
  switch i1 %10, label %11 [
    i1 true, label %13
  ]

11:                                               ; preds = %8
  %12 = extractvalue { i1, i8 } %9, 1
  br label %2

13:                                               ; preds = %8
  br label %14

14:                                               ; preds = %13
  ret i8 %7
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "/HeDgUnyeIVwAutKJHaZEPSZwPXP/ycUvnujGxZKPRCTcNfs/EGLoPGCKHhMq")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 26394, type: !5, scopeLine: 26395, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !7, !7}
!7 = !DIBasicType(name: "i8", size: 8, encoding: DW_ATE_unsigned)
!8 = !DILocation(line: 30006, column: 330, scope: !3)
